--- a/calculadora-ganancias/www/index.html
+++ b/calculadora-ganancias/www/index.html
@@ -12,12 +12,14 @@
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
 
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
     <script src="js/app.js"></script>
     <!-- the admob code -->
     <script src="js/ads.js"></script>
